# ADML

./: .gitignore  ADML_Specification.md  CONTRIBUTING.md  README.md  presentation.adml  pyproject.toml
adml/: __init__.py  cli.py
adml/adt/: __init__.py  core.py  resolver.py  validator.py
adml/grammar/: __init__.py  adml.lark  parser.py
adml/renderers/: __init__.py  base.py  html_renderer.py  pptx_renderer.py  svg_renderer.py
adml/utils/: colours.py  fonts.py  units.py
tests/: test_adt.py  test_parser.py  test_renderers.py
tests/fixtures/: shapes.adml  simple.adml  two_slides.adml
