[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adml-lang"
version = "0.1.0"
description = "AutoDesign Markup Language compiler"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lark>=1.1.9",
    "python-pptx>=0.6.23",
    "lxml>=5.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
adml = "adml.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["adml"]
